update gamebalance links

--- a/gamebalance.html
+++ b/gamebalance.html
@@ -71,12 +71,13 @@
                     <p>Using the machinations tool to make an XP system for an RPG game.</p>
                 </div>
                 <div class="card-action">
-                    <a href="Machinations%20Diagram%20Snapshot%20-%20Varun%20Bajaj.PNG"
-                        download="Varun Sunil Bajaj - Machinations Diagram.png">Machinations Diagram</a>
-                    <a href="Machinations%20Diagram%20Explained%20-%20Varun%20Bajaj.docx"
-                        download="Varun Sunil Bajaj - Machinations Diagram Explained.docx">Diagram Explained</a>
-                    <a href="RPG%20Machinations%20-%20Varun%20Bajaj.xml"
-                        download="Varun Sunil Bajaj - XP System.xml">Download Machinations File</a>
+                    <a href="images/gamebalance/Machinations%20Diagram%20Snapshot%20-%20Varun%20Bajaj.PNG"
+                        download="Varun Sunil Bajaj - Machinations Diagram.png" target="_blank">Machinations Diagram</a>
+                    <a href="https://drive.google.com/file/d/11LieVN7xT3U0SLVSRHKOPDtXAajgCoVA/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Machinations Diagram Explained.docx" target="_blank">Diagram
+                        Explained</a>
+                    <a href="https://drive.google.com/file/d/1v6RSBJyCxe5eXe-FWmSe-qFHLFiJvlv1/view?usp=sharing"
+                        download="Varun Sunil Bajaj - XP System.xml" target="_blank">Download Machinations File</a>
                 </div>
             </div>
         </div>
@@ -91,8 +92,8 @@
                     <p>Designing a game in favor of the house while seeming fair to the player at the same time!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Evil%20Gambling%20Game%20-%20Varun%20Sunil%20Bajaj.docx"
-                        download="Varun Sunil Bajaj - Evil Gambling Game.docx">Download Rule Sheet</a>
+                    <a href="https://drive.google.com/file/d/1JfABoq504bUvx5IYcfiSfiVwq46pNCQ0/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Evil Gambling Game.docx" target="_blank">Download Rule Sheet</a>
                 </div>
             </div>
         </div>
@@ -108,7 +109,8 @@
                     <p>Using Excel and Playtesting to create a balanced expansion pack!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Micro%20TCG%20-%20Varun%20Bajaj.xlsx" download="Varun Sunil Bajaj - Micro TCG">Download
+                    <a href="https://drive.google.com/file/d/1DWPncvrwIcP8A8O-smxGeF8D-6nayy8_/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Micro TCG" target="_blank">Download
                         Card Pack</a>
                 </div>
             </div>
@@ -126,8 +128,8 @@
                     <p>Creating an AI using formulae in Excel to defeat the opponent!</p>
                 </div>
                 <div class="card-action">
-                    <a href="DiceGameAI%20-%20Varun%20Sunil%20Bajaj.xlsx"
-                        download="Varun Sunil Bajaj - Dice Game AI.xlsx">Dice Game AI</a>
+                    <a href="https://drive.google.com/file/d/1vpLsc7OCrFm6FWkPwdrWKW9BYJl6vPOk/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Dice Game AI.xlsx" target="_blank">Dice Game AI</a>
                 </div>
             </div>
         </div>
@@ -143,12 +145,15 @@
                         designed for this challenge!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Idle%20Game%20Tournament%20Sheet%20-%20Rules.xlsx"
-                        download="Varun Sunil Bajaj - Idle Game Challenge Rules.xlsx">Rules for Challenge</a>
-                    <a href="Idle%20Game%20Tournament%20Strategy%20and%20Move%20List%20-%20Varun%20Sunil%20Bajaj.docx"
-                        download="Varun Sunil Bajaj - Idle Game Strategy.docx">My Strategy</a>
-                    <a href="Score%20Screenshot.png" download="Varun Sunil Bajaj - Idle Game Score.png">My Score</a>
-                    <a href="Game%20Files%20(2).zip" download="Idle Game Files.zip">Download Game</a>
+                    <a href="https://drive.google.com/file/d/1NWeSvDQNxTUMRW5qF-pLbiza4xJD_B-l/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Idle Game Challenge Rules.xlsx" target="_blank">Rules for
+                        Challenge</a>
+                    <a href="https://drive.google.com/file/d/11ahdxdq1N84Hurc7A20imMv7rwMPnHe-/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Idle Game Strategy.docx" target="_blank">My Strategy</a>
+                    <a href="images/gamebalance/Score Screenshot.png" download="Varun Sunil Bajaj - Idle Game Score.png"
+                        target="_blank">My Score</a>
+                    <a href="https://drive.google.com/file/d/1zFERKuvaD4ctqt9Q_uvJOuJXmLtEkuHH/view?usp=sharing"
+                        download="Idle Game Files.zip" target="_blank">Download Game</a>
                 </div>
             </div>
         </div>
@@ -163,9 +168,10 @@
                     <p>Using Excel to compute probabilities and determine the likelihood of events!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Questions.docx" download="Questions.docx">Questions</a>
-                    <a href="Solutions%20-%20Varun%20Sunil%20Bajaj.xlsx"
-                        download="Varun Sunil Bajaj - Solutions.xlsx">My Solutions</a>
+                    <a href="https://drive.google.com/file/d/17IbF7xMUujglCDL7bD5urKZo4ZrbTQoZ/view?usp=sharing"
+                        download="Questions.docx" target="_blank">Questions</a>
+                    <a href="https://drive.google.com/file/d/1Q7KK-O9O-lr4qYHjOjKLuGcUK1Wyp2Zk/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Solutions.xlsx" target="_blank">My Solutions</a>
                 </div>
             </div>
         </div>
@@ -182,9 +188,10 @@
                     <p>Designing a Markov chain for the game "Thunderstorm" using Excel!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Question.txt" download="Question.txt">Question</a>
-                    <a href="Challenge%20X3%20-%20Varun%20Sunil%20Bajaj.xlsx"
-                        download="Varun Sunil Bajaj - Solutions.xlsx">My Solutions</a>
+                    <a href="https://drive.google.com/file/d/1dxZHKzbCxOOpE3BvfJu1OXpQURAZQH-L/view?usp=sharing"
+                        download="Question.txt" target="_blank">Question</a>
+                    <a href="https://drive.google.com/file/d/1zrzYnAuKRKWZqg5wEquwUkHb7xUNfECU/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Solutions.xlsx" target="_blank">My Solutions</a>
                 </div>
             </div>
         </div>
@@ -199,7 +206,8 @@
                     <p>Creating an AI that will try to defeat a real-life opponent!</p>
                 </div>
                 <div class="card-action">
-                    <a href="AI.xlsx" download="Varun Sunil Bajaj - AI.xlsx">Download AI</a>
+                    <a href="https://drive.google.com/file/d/1rvFtmyQZOMMtBrNh4unifluj2RVK2W0t/view?usp=sharing"
+                        download="Varun Sunil Bajaj - AI.xlsx" target="_blank">Download AI</a>
                 </div>
             </div>
         </div>
@@ -216,8 +224,8 @@
                         Sniper Rifle from 0.5 to 0.7 Seconds for Halo 3" by Jaime Griesemer!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Weapon%20Balance%20in%20Halo%203%20and%20what%20we%20can%20learn%20from%20it%20-%20Varun%20Bajaj.pdf"
-                        download="Varun Sunil Bajaj - Weapon Balance in Halo 3.pdf">Download</a>
+                    <a href="https://drive.google.com/file/d/1qT2ew2OIemM-Ry0oeXVVHnWUIO9f1qrF/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Weapon Balance in Halo 3.pdf" target="_blank">Download</a>
                 </div>
             </div>
         </div>
@@ -234,8 +242,10 @@
                     <p>Testing my probability skills on Excel!</p>
                 </div>
                 <div class="card-action">
-                    <a href="Questions%20(2).docx" download="Questions.docx">Questions</a>
-                    <a href="Solutions.zip.zip" download="Varun Sunil Bajaj - Probability Solutions.zip">My
+                    <a href="https://drive.google.com/file/d/1RYW1t1zOcMG0lGwRAF7a3XtZ41WRsGFh/view?usp=sharing"
+                        download="Questions.docx" target="_blank">Questions</a>
+                    <a href="https://drive.google.com/file/d/1NOJPMNw_QoFvo7kk2L6ENwgQGQv-3Mf9/view?usp=sharing"
+                        download="Varun Sunil Bajaj - Probability Solutions.zip" target="_blank">My
                         Solutions</a>
                 </div>
             </div>
