make footer sticky in all pages

--- a/maya.html
+++ b/maya.html
@@ -45,123 +45,126 @@
 </head>
 
 <body>
-    <div class="navbar-fixed">
-        <nav class="white" role="navigation">
-            <div class="nav-wrapper container">
-                <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
-                </ul>
+    <main>
+        <div class="navbar-fixed">
+            <nav class="white" role="navigation">
+                <div class="nav-wrapper container">
+                    <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
+                    </ul>
 
-                <ul id="nav-mobile" class="side-nav">
-                    <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
-                </ul>
-                <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-            </div>
-        </nav>
-    </div>
-    <div class="row">
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="Chess.PNG">
-                    <span class="card-title">Chess Set (Individual)</span>
+                    <ul id="nav-mobile" class="side-nav">
+                        <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
+                    </ul>
+                    <a href="#" data-activates="nav-mobile" class="button-collapse"><i
+                            class="material-icons">menu</i></a>
                 </div>
-                <div class="card-action">
-                    <a href="https://sketchfab.com/models/ac827c4c8b924b2aa04209bcfd885f4a" target="_blank">View 3D
-                        Model</a>
-                </div>
-            </div>
+            </nav>
         </div>
+        <div class="row">
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="Chess.PNG">
+                        <span class="card-title">Chess Set (Individual)</span>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://sketchfab.com/models/ac827c4c8b924b2aa04209bcfd885f4a" target="_blank">View 3D
+                            Model</a>
+                    </div>
+                </div>
+            </div>
 
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="Axe.PNG">
-                    <span class="card-title">Axe (Individual)</span>
-                </div>
-                <div class="card-action">
-                    <a href="https://sketchfab.com/models/73e8deebe4ce47be92bc34eb6ece7f3f" target="_blank">View 3D
-                        Model</a>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="Axe.PNG">
+                        <span class="card-title">Axe (Individual)</span>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://sketchfab.com/models/73e8deebe4ce47be92bc34eb6ece7f3f" target="_blank">View 3D
+                            Model</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="Baby.PNG">
-                    <span class="card-title">Baby Character Model (Individual)</span>
-                </div>
-                <div class="card-action">
-                    <a href="https://sketchfab.com/models/7e34ac6477f84951a09b50aacbf6855a" target="_blank">View 3D
-                        Model</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="Hammer.png">
-                    <span class="card-title">Hammer (Individual)</span>
-                </div>
-                <div class="card-action">
-                    <a href="https://sketchfab.com/models/a9875759dd204c0d9fa16f1b329c5c3b" target="_blank">View 3D
-                        Model</a>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="Baby.PNG">
+                        <span class="card-title">Baby Character Model (Individual)</span>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://sketchfab.com/models/7e34ac6477f84951a09b50aacbf6855a" target="_blank">View 3D
+                            Model</a>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="Hammer.png">
+                        <span class="card-title">Hammer (Individual)</span>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://sketchfab.com/models/a9875759dd204c0d9fa16f1b329c5c3b" target="_blank">View 3D
+                            Model</a>
+                    </div>
+                </div>
+            </div>
 
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="Chair.PNG">
-                    <span class="card-title">Chair (Individual)</span>
-                </div>
-                <div class="card-action">
-                    <a href="https://sketchfab.com/models/4c9536a2d87e4c908be0ba66b72343d7" target="_blank">View 3D
-                        Model</a>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="Chair.PNG">
+                        <span class="card-title">Chair (Individual)</span>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://sketchfab.com/models/4c9536a2d87e4c908be0ba66b72343d7" target="_blank">View 3D
+                            Model</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="candle.PNG">
-                    <span class="card-title">Candle Animation (Individual)</span>
-                </div>
-                <div class="card-action">
-                    <a onclick="showhide_candle();">View Animation</a>
-                </div>
-                <div class="video-container" id="candle" style="display: none;">
-                    <video class="responsive-video" controls id="candle">
-                        <source src="Candle.mp4" type="video/mp4">
-                    </video>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="Mechanical_Arm.PNG">
-                    <span class="card-title">Mechanical Arm Animation (Individual)</span>
-                </div>
-                <div class="card-action">
-                    <a onclick="showhide_arm();">View Animation</a>
-                </div>
-                <div class="video-container" id="arm" style="display: none;">
-                    <video class="responsive-video" controls id="arm">
-                        <source src="Mechanical_Arm.mp4" type="video/mp4">
-                    </video>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="candle.PNG">
+                        <span class="card-title">Candle Animation (Individual)</span>
+                    </div>
+                    <div class="card-action">
+                        <a onclick="showhide_candle();">View Animation</a>
+                    </div>
+                    <div class="video-container" id="candle" style="display: none;">
+                        <video class="responsive-video" controls id="candle">
+                            <source src="Candle.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="Mechanical_Arm.PNG">
+                        <span class="card-title">Mechanical Arm Animation (Individual)</span>
+                    </div>
+                    <div class="card-action">
+                        <a onclick="showhide_arm();">View Animation</a>
+                    </div>
+                    <div class="video-container" id="arm" style="display: none;">
+                        <video class="responsive-video" controls id="arm">
+                            <source src="Mechanical_Arm.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
