--- a/gamedesign.html
+++ b/gamedesign.html
@@ -45,119 +45,124 @@
 </head>
 
 <body>
-    <div class="navbar-fixed">
-        <nav class="white" role="navigation">
-            <div class="nav-wrapper container">
-                <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
-                </ul>
+    <main>
+        <div class="navbar-fixed">
+            <nav class="white" role="navigation">
+                <div class="nav-wrapper container">
+                    <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
+                    </ul>
 
-                <ul id="nav-mobile" class="side-nav">
-                    <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
-                </ul>
-                <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+                    <ul id="nav-mobile" class="side-nav">
+                        <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
+                    </ul>
+                    <a href="#" data-activates="nav-mobile" class="button-collapse"><i
+                            class="material-icons">menu</i></a>
+                </div>
+            </nav>
+        </div>
+        <div class="row">
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="escape.jpg">
+                        <span class="card-title">Escape Room Critique (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Critiquing the world's most popular puzzle experience!</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf"
+                            download="Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf">Download</a>
+                    </div>
+                </div>
             </div>
-        </nav>
-    </div>
-    <div class="row">
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="escape.jpg">
-                    <span class="card-title">Escape Room Critique (Individual)</span>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="crash.jpg">
+                        <span class="card-title">Crash Bandicoot Critique (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Critiquing this 1996 classic!</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf"
+                            download="Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf">Download</a>
+                    </div>
                 </div>
-                <div class="card-content white-text">
-                    <p>Critiquing the world's most popular puzzle experience!</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf"
-                        download="Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf">Download</a>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="uncharted.jpg">
+                        <span class="card-title">Uncharted 2: Among Thieves Critique (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Critiquing Naughty Dog's finest!</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf"
+                            download="Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf">Download</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="crash.jpg">
-                    <span class="card-title">Crash Bandicoot Critique (Individual)</span>
+        <div class="row">
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="lis.jpg">
+                        <span class="card-title">Life is Strange Critique (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Critiquing this choice-driven interactive narrative storytelling experience!</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf"
+                            download="Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf">Download</a>
+                    </div>
                 </div>
-                <div class="card-content white-text">
-                    <p>Critiquing this 1996 classic!</p>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="inception.jpg">
+                        <span class="card-title">Inter-media Game Pitch (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>A game pitch for a cross between Inception and The Hunger Games.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Game Pitch.pptx"
+                            download="Varun Sunil Bajaj - Game Design - Game Pitch.pptx">Download</a>
+                    </div>
                 </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf"
-                        download="Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf">Download</a>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="wotg.jpg">
+                        <span class="card-title">Word of the Grey (Group)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>A presentation and complete Game Design Document for a one-of-a-kind 2D puzzle platformer.
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx"
+                            download="Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx">Download
+                            Presentation</a>
+                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf"
+                            download="Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf">Download
+                            Design Doc</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="uncharted.jpg">
-                    <span class="card-title">Uncharted 2: Among Thieves Critique (Individual)</span>
-                </div>
-                <div class="card-content white-text">
-                    <p>Critiquing Naughty Dog's finest!</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf"
-                        download="Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf">Download</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="lis.jpg">
-                    <span class="card-title">Life is Strange Critique (Individual)</span>
-                </div>
-                <div class="card-content white-text">
-                    <p>Critiquing this choice-driven interactive narrative storytelling experience!</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf"
-                        download="Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf">Download</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="inception.jpg">
-                    <span class="card-title">Inter-media Game Pitch (Individual)</span>
-                </div>
-                <div class="card-content white-text">
-                    <p>A game pitch for a cross between Inception and The Hunger Games.</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Game Pitch.pptx"
-                        download="Varun Sunil Bajaj - Game Design - Game Pitch.pptx">Download</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="wotg.jpg">
-                    <span class="card-title">Word of the Grey (Group)</span>
-                </div>
-                <div class="card-content white-text">
-                    <p>A presentation and complete Game Design Document for a one-of-a-kind 2D puzzle platformer.</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx"
-                        download="Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx">Download
-                        Presentation</a>
-                    <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf"
-                        download="Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf">Download
-                        Design Doc</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    </main>
+
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
