--- a/gamedev.html
+++ b/gamedev.html
@@ -45,115 +45,118 @@
 </head>
 
 <body>
-    <div class="navbar-fixed">
-        <nav class="white" role="navigation">
-            <div class="nav-wrapper container">
-                <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
-                </ul>
+    <main>
+        <div class="navbar-fixed">
+            <nav class="white" role="navigation">
+                <div class="nav-wrapper container">
+                    <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
+                    </ul>
 
-                <ul id="nav-mobile" class="side-nav">
-                    <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
-                </ul>
-                <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+                    <ul id="nav-mobile" class="side-nav">
+                        <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
+                    </ul>
+                    <a href="#" data-activates="nav-mobile" class="button-collapse"><i
+                            class="material-icons">menu</i></a>
+                </div>
+            </nav>
+        </div>
+        <div class="row">
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="tempest%20(1).jpg">
+                        <span class="card-title">Tempest Quality Assurance Process (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Preparing a QA sheet for the popular arcade game, Tempest!</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip"
+                            download="Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip">Download</a>
+                    </div>
+                </div>
             </div>
-        </nav>
-    </div>
-    <div class="row">
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="tempest%20(1).jpg">
-                    <span class="card-title">Tempest Quality Assurance Process (Individual)</span>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="ritj.jpg">
+                        <span class="card-title">Rumble in the Jungle Game Pitch (Group)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Presentation for a game we pitched in class!</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx"
+                            download="Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx">Download</a>
+                    </div>
                 </div>
-                <div class="card-content white-text">
-                    <p>Preparing a QA sheet for the popular arcade game, Tempest!</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip"
-                        download="Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip">Download</a>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="esc.jpg">
+                        <span class="card-title">Esc High Concept Document (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>An HCD for a game I designed called Esc, set in ancient Egypt.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx"
+                            download="Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx">Download</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="ritj.jpg">
-                    <span class="card-title">Rumble in the Jungle Game Pitch (Group)</span>
+        <div class="row">
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="donkey.jpg">
+                        <span class="card-title">Risk Assessment (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Creating a feature-system matrix and a risk assessment grid for Donkey Kong.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx"
+                            download="Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx">Download</a>
+                    </div>
                 </div>
-                <div class="card-content white-text">
-                    <p>Presentation for a game we pitched in class!</p>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="mw.jpg">
+                        <span class="card-title">Game Postmortem (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Analysing the release and market performance of Call of Duty Modern Warfare.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx"
+                            download="Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx">Download</a>
+                    </div>
                 </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx"
-                        download="Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx">Download</a>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="idea.jpg">
+                        <span class="card-title">Blue Sky Open Idea Formation and Brainstorming (Individual)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>A discussion about Blue Sky Open Idea Formation and Brainstorming.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx"
+                            download="Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx">Download</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="esc.jpg">
-                    <span class="card-title">Esc High Concept Document (Individual)</span>
-                </div>
-                <div class="card-content white-text">
-                    <p>An HCD for a game I designed called Esc, set in ancient Egypt.</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx"
-                        download="Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx">Download</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="donkey.jpg">
-                    <span class="card-title">Risk Assessment (Individual)</span>
-                </div>
-                <div class="card-content white-text">
-                    <p>Creating a feature-system matrix and a risk assessment grid for Donkey Kong.</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx"
-                        download="Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx">Download</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="mw.jpg">
-                    <span class="card-title">Game Postmortem (Individual)</span>
-                </div>
-                <div class="card-content white-text">
-                    <p>Analysing the release and market performance of Call of Duty Modern Warfare.</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx"
-                        download="Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx">Download</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m4 l4">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="idea.jpg">
-                    <span class="card-title">Blue Sky Open Idea Formation and Brainstorming (Individual)</span>
-                </div>
-                <div class="card-content white-text">
-                    <p>A discussion about Blue Sky Open Idea Formation and Brainstorming.</p>
-                </div>
-                <div class="card-action">
-                    <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx"
-                        download="Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx">Download</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    </main>
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
