--- a/vr_game_dev.html
+++ b/vr_game_dev.html
@@ -45,58 +45,61 @@
 </head>
 
 <body>
-    <div class="navbar-fixed">
-        <nav class="white" role="navigation">
-            <div class="nav-wrapper container">
-                <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
-                </ul>
+    <main>
+        <div class="navbar-fixed">
+            <nav class="white" role="navigation">
+                <div class="nav-wrapper container">
+                    <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
+                    </ul>
 
-                <ul id="nav-mobile" class="side-nav">
-                    <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
-                </ul>
-                <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-            </div>
-        </nav>
-    </div>
-    <div class="row">
-        <div class="col s12 m6 l6 push-m3 push-l3">
-            <div class="card hoverable black">
-                <div class="card-image">
-                    <img src="prod_studio.gif">
-                    <span class="card-title">Escape Room VR (Group Project)</span>
+                    <ul id="nav-mobile" class="side-nav">
+                        <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
+                    </ul>
+                    <a href="#" data-activates="nav-mobile" class="button-collapse"><i
+                            class="material-icons">menu</i></a>
                 </div>
-                <div class="card-content white-text">
-                    <p>Creating an Escape Room game playable in Virtual Reality, using Unity 3D.</p>
-                </div>
-                <div class="card-action">
-                    <a href="Game%20Files.zip" download="Varun Sunil Bajaj - Escape Room VR.zip">Download Game</a>
-                    <a onclick="showhide_lvl1();">View Level 1 Pitch</a>
-                    <a onclick="showhide_lvl2();">View Level 2 Pitch</a>
-                    <a onclick="showhide_game();">Walkthrough</a><br>
-                    <a href="Escape%20Room%20VR%20-%20Final%20Design%20Document.pdf"
-                        download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf">Download Game Design
-                        Document</a>
-                </div>
-                <div class="video-container" id="lvl1" style="display: none;">
-                    <video class="responsive-video" controls id="lvl1">
-                        <source src="Room%201%20Pitch.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="video-container" id="lvl2" style="display: none;">
-                    <video class="responsive-video" controls id="lvl2">
-                        <source src="Room%202%20Pitch.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="video-container" id="game" style="display: none;">
-                    <video class="responsive-video" controls id="game">
-                        <source src="Escape%20Room%20VR%20Final%20Game%20Gameplay.mp4" type="video/mp4">
-                    </video>
+            </nav>
+        </div>
+        <div class="row">
+            <div class="col s12 m6 l6 push-m3 push-l3">
+                <div class="card hoverable black">
+                    <div class="card-image">
+                        <img src="prod_studio.gif">
+                        <span class="card-title">Escape Room VR (Group Project)</span>
+                    </div>
+                    <div class="card-content white-text">
+                        <p>Creating an Escape Room game playable in Virtual Reality, using Unity 3D.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="Game%20Files.zip" download="Varun Sunil Bajaj - Escape Room VR.zip">Download Game</a>
+                        <a onclick="showhide_lvl1();">View Level 1 Pitch</a>
+                        <a onclick="showhide_lvl2();">View Level 2 Pitch</a>
+                        <a onclick="showhide_game();">Walkthrough</a><br>
+                        <a href="Escape%20Room%20VR%20-%20Final%20Design%20Document.pdf"
+                            download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf">Download Game Design
+                            Document</a>
+                    </div>
+                    <div class="video-container" id="lvl1" style="display: none;">
+                        <video class="responsive-video" controls id="lvl1">
+                            <source src="Room%201%20Pitch.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="video-container" id="lvl2" style="display: none;">
+                        <video class="responsive-video" controls id="lvl2">
+                            <source src="Room%202%20Pitch.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="video-container" id="game" style="display: none;">
+                        <video class="responsive-video" controls id="game">
+                            <source src="Escape%20Room%20VR%20Final%20Game%20Gameplay.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
     <footer class="page-footer black">
         <div class="container">
             <ul style="list-style:none;" class="center">
