add links and images to gamedesign page

--- a/gamedesign.html
+++ b/gamedesign.html
@@ -66,45 +66,48 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="escape.jpg">
+                        <img src="images/gamedesign/escape.jpg">
                         <span class="card-title">Escape Room Critique (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>Critiquing the world's most popular puzzle experience!</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf"
-                            download="Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf">Download</a>
+                        <a href="https://drive.google.com/file/d/1d7_gtC8nNZKRs8eqlJUFv3C0IdyA5S73/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="crash.jpg">
+                        <img src="images/gamedesign/crash.jpg">
                         <span class="card-title">Crash Bandicoot Critique (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>Critiquing this 1996 classic!</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf"
-                            download="Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf">Download</a>
+                        <a href="https://drive.google.com/file/d/19pXZvWe4LxkpIMJn18ipKaBkXhf2dz7B/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Design - Critique 2 - Crash Bandicoot.pdf"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="uncharted.jpg">
+                        <img src="images/gamedesign/uncharted.jpg">
                         <span class="card-title">Uncharted 2: Among Thieves Critique (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>Critiquing Naughty Dog's finest!</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf"
-                            download="Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf">Download</a>
+                        <a href="https://drive.google.com/file/d/1VhzKSLD8d7UVAHWit6m8QbTA4Z5kH6oc/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Design - Critique 3 - Uncharted 2 Among Theives.pdf"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
@@ -113,37 +116,38 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="lis.jpg">
+                        <img src="images/gamedesign/lis.jpg">
                         <span class="card-title">Life is Strange Critique (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>Critiquing this choice-driven interactive narrative storytelling experience!</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf"
-                            download="Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf">Download</a>
+                        <a href="https://drive.google.com/file/d/1d0e5KllAVU84cBv0P1anIF2bLe1sVIwH/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Design - Critique 4 - Life is Strange.pdf"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="inception.jpg">
+                        <img src="images/gamedesign/inception.jpg">
                         <span class="card-title">Inter-media Game Pitch (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>A game pitch for a cross between Inception and The Hunger Games.</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Game Pitch.pptx"
-                            download="Varun Sunil Bajaj - Game Design - Game Pitch.pptx">Download</a>
+                        <a href="https://drive.google.com/file/d/11H4JolA5ux8jC7NKsKJxBk4xjTnjO5PJ/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Design - Game Pitch.pptx" target="_blank">Download</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="wotg.jpg">
+                        <img src="images/gamedesign/wotg.jpg">
                         <span class="card-title">Word of the Grey (Group)</span>
                     </div>
                     <div class="card-content white-text">
@@ -151,11 +155,13 @@
                         </p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx"
-                            download="Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx">Download
+                        <a href="https://drive.google.com/file/d/1Ji6DKXJkelWEnf903YtMp3jpVPztxcbu/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx"
+                            target="_blank">Download
                             Presentation</a>
-                        <a href="All%20Assignments/GAME%20DESIGN/Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf"
-                            download="Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf">Download
+                        <a href="https://drive.google.com/file/d/19PFEwsIob7_YlmpJV5jh3RryWJNf-4S4/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf"
+                            target="_blank">Download
                             Design Doc</a>
                     </div>
                 </div>
