--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <p>Level layouts, design and analyses, seminars.</p>
                             </div>
                             <div class="card-action">
-                                <a href="images/home/leveldesign.html" target="_blank">Check out My Work</a>
+                                <a href="leveldesign.html" target="_blank">Check out My Work</a>
                             </div>
                         </div>
                     </div>
