add links, images for gamedev page

--- a/gamedev.html
+++ b/gamedev.html
@@ -66,45 +66,48 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="tempest%20(1).jpg">
+                        <img src="images/gamedev/tempest%20(1).jpg">
                         <span class="card-title">Tempest Quality Assurance Process (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>Preparing a QA sheet for the popular arcade game, Tempest!</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip"
-                            download="Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip">Download</a>
+                        <a href="https://drive.google.com/file/d/1Fz--PJUun96ao1raksRV8y54uccBKkmU/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="ritj.jpg">
+                        <img src="images/gamedev/ritj.jpg">
                         <span class="card-title">Rumble in the Jungle Game Pitch (Group)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>Presentation for a game we pitched in class!</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx"
-                            download="Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx">Download</a>
+                        <a href="https://drive.google.com/file/d/1_izqe0to5qIgeZKqf5cgVAx_2nf-fo9q/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="esc.jpg">
+                        <img src="images/gamedev/esc.jpg">
                         <span class="card-title">Esc High Concept Document (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>An HCD for a game I designed called Esc, set in ancient Egypt.</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx"
-                            download="Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx">Download</a>
+                        <a href="https://drive.google.com/file/d/1x0zzl-mEu5S_AA5wNsAb1XpfYJ2il-Ga/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
@@ -113,45 +116,48 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="donkey.jpg">
+                        <img src="images/gamedev/donkey.jpg">
                         <span class="card-title">Risk Assessment (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>Creating a feature-system matrix and a risk assessment grid for Donkey Kong.</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx"
-                            download="Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx">Download</a>
+                        <a href="https://drive.google.com/file/d/1VogRhjb82St7Nmo7_3cUa4xxMNU2-207/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="mw.jpg">
+                        <img src="images/gamedev/mw.jpg">
                         <span class="card-title">Game Postmortem (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>Analysing the release and market performance of Call of Duty Modern Warfare.</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx"
-                            download="Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx">Download</a>
+                        <a href="https://drive.google.com/file/d/16uM6RvcOgK2kdurQnGfnDdJWntcoKMPr/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="idea.jpg">
+                        <img src="images/gamedev/idea.jpg">
                         <span class="card-title">Blue Sky Open Idea Formation and Brainstorming (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>A discussion about Blue Sky Open Idea Formation and Brainstorming.</p>
                     </div>
                     <div class="card-action">
-                        <a href="All%20Assignments/GAME%20DEVELOPMENT%20PROCESSES/Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx"
-                            download="Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx">Download</a>
+                        <a href="https://drive.google.com/file/d/1TjyPSdlgYCU3ABY_FykDFwNghle1C8_J/view?usp=sharing"
+                            download="Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx"
+                            target="_blank">Download</a>
                     </div>
                 </div>
             </div>
